fixed container overflow again

--- a/static/styles.css
+++ b/static/styles.css
@@ -8,9 +8,9 @@ body, html{
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* padding: 0px;
+    padding: 0px;
     margin: 0px;
-    overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 img:hover{
